# vit

./: configs.py  mae_and_train.py  pyproject.toml  train.py
modules/: Sinusoidal_positional_Encoding.py  Transformer_modules.py  VisionTransformer.py
